NetworkPolicies/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    frontend: pod-1
spec:
  containers:
    - name: nginx
      image: nginx
