NetworkPolicies/nginxpodwithNP.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxnp
  labels:
    frontend: pod-2
spec:
  containers:
    - name: nginx
      image: nginx
