NetworkPolicies/nginxService.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-service
spec:
  selector:
    frontend: pod-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
