NetworkPolicies/svcforNP.yaml
apiVersion: v1
kind: Service
metadata:
  name: second-service
spec:
  selector:
    frontend: pod-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
